force-app/main/default/objects/Opportunity/fields/Enroll_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Commitment__c</fullName>
    <description>Please make the appropriate selection below to accept or decline this offer</description>
    <label>Enroll Commitment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I am declining the offer of enrollment for my student.</fullName>
            </value>
            <value>
                <fullName>I declare my commitment to enroll for my student for the 2018–19 school year.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>