force-app/main/default/objects/Opportunity/fields/Enroll_Commitment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Commitment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enroll Commitment Date</label>
    <type>Date</type>
</CustomField>