force-app/main/default/objects/Opportunity/fields/Enroll_Commitment_Signature__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Commitment_Signature__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enroll Commitment Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>