force-app/main/default/objects/Opportunity/fields/Intent_to_Enroll_Signature__c.field-meta.xml
<CustomField>
    <fullName>Intent_to_Enroll_Signature__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intent to Enroll Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>