force-app/main/default/objects/Opportunity/fields/OEA_Signature__c.field-meta.xml
<CustomField>
    <fullName>OEA_Signature__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OEA Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>